src/app/page.module.css
.Container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  --tab-line: #888;
  --tab-panel: black;
  --tab-background: #333;
  --node-line: #888;
  --node-background: #222;
  --node-select-line: #0af;
  --node-active-line: #0af;

  --color-number: #aaf;
  --color-string: #faa;
  --color-boolean: #afa;
  --color-Point: orange;
  --color-Line: #00c59e;
  --color-Circle: #00c59e;
  --color-Arc: #00c59e;
  --color-Curve: #00c59e;
  --color-Segment: #00c59e;
  --color-Path: #00c59e;
  --color-Model: #f0c;
  --color-PolyLine: #f0c;
  --color-any: silver;
  --color-Geometry: #0af;
}

.Container.placing :global(.react-flow__pane.draggable) {
  cursor: crosshair;
}

.Header {
  gap: 4px;
  display: flex;
  padding: 4px;
}

.Panes {
  flex: 1;
  display: flex;
  overflow: hidden;
}

.Version {
  flex: 1;
  text-align: right;
  padding-right: 16px;
}

.FlowPane {
  flex: 2;
  display: flex;
  flex-direction: column;
  position: relative;
}
.Error {
  position: absolute;
  bottom: 16px;
  left: 100px;
  right: 100px;
  color: red;
  padding: 4px;
  background: #300;
}

.ResultPane {
  flex: 1;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}


.Canvas {
  flex: 1;
  background-color: white;
  color: black;
  position: relative;
}

.Scroll {
  height: 100%;
  cursor: grab;
  touch-action: none;
}

.Canvas svg {
  overflow: visible;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 1px;
  height: 1px;
}

.Data {
  overflow:auto;
  flex:1;
}

.Download {
  position: absolute;
  right: 4px;
  top: -24px;
}


.XAxis {
  stroke: red;
  stroke-width: 1px;
  vector-effect: non-scaling-stroke;
}

.YAxis {
  stroke: green;
  stroke-width: 1px;
  vector-effect: non-scaling-stroke;
}

.Geometry path {
  stroke: black;
  stroke-width: 1px;
  fill: none;
  vector-effect: non-scaling-stroke;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.Canvas :global(.Point) {
  stroke: red;
  marker-end: url(#cross);
}

:global(#cross) path {
  stroke: context-stroke;
  stroke-width: 2px;
  vector-effect: non-scaling-stroke;
}

.Selection path {
  stroke: #0af !important;
  stroke-width: 1px;
  fill: none;
  vector-effect: non-scaling-stroke;
  stroke-linecap: round;
  stroke-linejoin: round;
}

